--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
       </nav>
     </header>
     <main>
-      <div class="container"></div>
-      <div class="container"></div>
-      <div class="container"></div>
+      <div class="container">
+        <div class="content">
+          <h2>Recent launch</h2>
+          <h1>Shipflight video</h1>
+          <button class="read-more">Read More</button>
+        </div>
+      </div>
+      <div class="container">
+        <h2>Buy tickets</h2>
+        <h1>You can go to space!</h1>
+        <button class="read-more">Read More</button>
+      </div>
+      <div class="container">
+        <h2>Space travel deals</h2>
+        <h1>You might not have to sell a kidney!</h1>
+        <button class="read-more">Read More</button>
+      </div>
     </main>
     <footer><p>SpaceY © 2023</p></footer>
   </body>
